[gd_scene load_steps=5 format=3 uid="uid://bgo5kx0jbt04d"]

[ext_resource type="Script" uid="uid://21enfbisruj7" path="res://HUD/player_ui/player_ui.gd" id="1_istvb"]
[ext_resource type="Theme" uid="uid://c87yk8aut7ts7" path="res://HUD/theme.tres" id="1_v4tk5"]
[ext_resource type="FontFile" uid="uid://ctq7gwtb0jyce" path="res://HUD/Terminal.ttf" id="3_d54fo"]
[ext_resource type="Texture2D" uid="uid://cph7evo70ts78" path="res://Art/heart.png" id="5_raufu"]

[node name="PlayerUi" type="VBoxContainer"]
clip_contents = true
offset_right = 968.0
offset_bottom = 413.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_v4tk5")
alignment = 1
script = ExtResource("1_istvb")

[node name="PanelContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 56)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerLabel" type="Label" parent="PanelContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_d54fo")
text = "P1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Colon" type="Label" parent="PanelContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_d54fo")
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="PanelContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_d54fo")
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2

[node name="ColorRect" type="TextureRect" parent="HealthLabel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_raufu")
expand_mode = 3

[node name="ColorRect2" type="TextureRect" parent="HealthLabel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_raufu")
expand_mode = 3

[node name="ColorRect3" type="TextureRect" parent="HealthLabel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_raufu")
expand_mode = 3

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "BASH MODE"

[node name="PowerupBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_v4tk5")
theme_override_font_sizes/font_size = 40
